writing to settings file